优化上下文结构